--- a/www/hub.html
+++ b/www/hub.html
@@ -84,10 +84,10 @@
       </div>
 
       <span id="fieldItemIconTemplates" hidden>
-        <svg class="field-item-icon" height="12" width="12">
+        <svg class="field-item-icon clickable" height="12" width="12">
           <polygon points="1,0 1,12 11,6"></polygon>
         </svg>
-        <svg class="field-item-icon" height="12" width="12">
+        <svg class="field-item-icon clickable" height="12" width="12">
           <polygon points="12,1 0,1 6,11"></polygon>
         </svg>
         <svg class="field-item-icon" height="12" width="12">
@@ -495,6 +495,9 @@
 
       <!-- Metadata -->
       <div id="controller12"></div>
+
+      <!-- Commands -->
+      <div id="controller13"></div>
     </span>
 
     <span id="rendererTemplates" hidden>
@@ -676,6 +679,14 @@
               </tr>
             </tbody>
           </table>
+        </div>
+      </div>
+
+      <!-- Commands -->
+      <div id="renderer13">
+        <div class="commands-connect-message tab-centered">Connect to a source that has Command logging installed</div>
+        <div class="commands-container" hidden>
+          <ol class="commands-list"></ol>
         </div>
       </div>
     </span>
